[backend] Fix recurring scenario not cleaned